--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
+  <!--This is header cection-->
   <header>
     <nav>
       <h3 class="nav-title">G3 Architects</h3>
@@ -24,15 +25,47 @@
         <h1 class="banner-title">
           Brand New <br> Group of Architects </h1>
           <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-          <button class="btn-primary">Explore More</button>
+          <button class="btn-primary">Explore More</button></div>
+          <div class="banner-img">
+          <img class="img" src="./images/banner.png" alt=""></div>
       </div>
-      <div class="banner-img">
-        <img src="./images/banner.png" alt="">
-      </div>
-    </div>
+  
   </header>
+  <!--This is main section-->
   <main>
+    <section>
+      <div class="teams-container"> 
+        <div class="teams-img">
+          <img src="./images/team1.png" alt="">
+          <img src="./images/team2.png" alt="">
+          <img src="./images/team3.png" alt="">
+          <img src="./images/team4.png" alt="">
+          
+        </div>
+        <div class="teams-contant">
+          <h3 class="teams-title"><span class="quick-list">Quick list</span> <span class="of-you">of Our</span> <span class="features">Features</span></h3>
+          <p class="teams-description">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </div>
+    </section>
+    <!--features section -->
+    <section>
+      <div class="features">
 
+
+
+      </div>
+    </section>
+    <!--facts secttion-->
+    <section>
+      <div class="favts">
+        <h3 class="favts-title">Some Facts</h3>
+        <p class=" ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </div>
+    </section>
   </main>
   <footer>
 
