--- a/index.html
+++ b/index.html
@@ -54,6 +54,38 @@
     <!--features section -->
     <section>
       <div class="features">
+        <div class="features-contant">
+          <h1
+          class="features-title">Features you will <br>love & enjoy</h1>
+          <p class="features-description">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+          </p>
+          <div class="features-card">
+            <h4> Dexktop & Mobile Version</h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="features-card">
+            <h4>Drag & Drop Builder </h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+        <div class="features-card">
+          <h4>Awesome Modern Design </h4>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="features-card">
+        <h4>Super Easy to Edit </h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        </div>
+       
+
+        <div class="feature-img">
+          <img src="./images/architect.png" alt="">
+          <div class="ten-year">
+            <h3>10+ Year</h3>
+            <p>Experiens</p>
+          </div>
+        </div>
 
 
 
@@ -64,6 +96,44 @@
       <div class="favts">
         <h3 class="favts-title">Some Facts</h3>
         <p class=" ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </div>
+   <div class="facts-container">
+      <div class="card">
+        <img src="./images/icons/ribon.png" alt="">
+        <h2 class="card-stats">54</h2>
+        <p class="card-title">Awards Winnings</p>
+      </div>
+      <div class="card">
+        <img src="./images/icons/projects.png" alt="">
+        <h2 class="card-stats">1458</h2>
+        <p class="card-title">Project Finished</p>
+      </div>
+      <div class="card">
+        <img src="./images/icons/customers.png" alt="">
+        <h2 class="card-stats">590</h2>
+        <p class="card-title">Clients Worked</p>
+      </div>
+      <div class="card">
+        <img src="./images/icons/email.png" alt="">
+        <h2 class="card-stats">22578</h2>
+        <p class="card-title">Email Send</p>
+      </div>
+   </div>
+    </section>
+    <!--sponsore section-->
+    <section>
+      <div class="sponsore-contact">
+      <div class="sponsore-container">
+        <h3 class="sponsore-title">Our Sponspors</h3>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </div>
+      <div class="sponsore-img">
+        <img src="./images/sponsors/spotify.png" alt="">
+        <img src="./images/sponsors/amazon.png" alt="">
+        <img src="./images/sponsors/google.png" alt="">
+        <img src="./images/sponsors/telerama.png" alt="">
+        <img src="./images/sponsors/figma.png" alt="">
+      </div>
       </div>
     </section>
   </main>
